tests/errors/syn12.kt
fun main() {
    for (i in a) {}
}